All_Component_DX/force-app/main/default/objects/Service_Group_Skills__c/fields/Availability_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_End_Date__c</fullName>
    <description>Date up to which this skill is available in this group</description>
    <inlineHelpText>Date up to which this skill is available in this group</inlineHelpText>
    <label>Availability End Date</label>
    <type>Date</type>
</CustomField>