All_Component_DX/force-app/main/default/objects/Service_Group_Skills__c/fields/Availability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Start_Date__c</fullName>
    <description>Date from which this skill is available in this group</description>
    <inlineHelpText>Date from which this skill is available in this group</inlineHelpText>
    <label>Availability Start Date</label>
    <type>Date</type>
</CustomField>