All_Component_DX/force-app/main/default/objects/Service_Group_Skills__c/fields/Is_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Applicable__c</fullName>
    <formula>IF( ISNULL( Availability_Start_Date__c ) , IF( ISNULL( Availability_End_Date__c ), &apos;TRUE&apos;, IF( Availability_End_Date__c &gt;= TODAY(), &apos;TRUE&apos;, &apos;FALSE&apos;)), IF(ISNULL(Availability_End_Date__c), IF( Availability_Start_Date__c &lt;= TODAY() , &apos;TRUE&apos;, &apos;FALSE&apos;), IF( AND(Availability_End_Date__c &gt;= TODAY(), Availability_Start_Date__c &lt;= TODAY()), &apos;TRUE&apos;, &apos;FALSE&apos;)))</formula>
    <label>Is Applicable</label>
    <type>Text</type>
</CustomField>