All_Component_DX/force-app/main/default/objects/Service_Group_Skills__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the skill. Is a lookup to an existing skill record in ServiceMax</description>
    <inlineHelpText>Name of the skill. Is a lookup to an existing skill record in ServiceMax</inlineHelpText>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipName>Service_Group_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>