All_Component_DX/force-app/main/default/objects/Service_Group_Skills__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <description>Proficiency level at which this skill is available. See skill definition for low, medium and high benchmarks of this skill.</description>
    <inlineHelpText>Proficiency level at which this skill is available. See skill definition for low, medium and high benchmarks of this skill.</inlineHelpText>
    <label>Skill Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>